// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convert config should support options 0 1`] = `
"import * as React from 'react'

function SvgComponent(props) {
  return (
    <svg viewBox=\\"0 0 88 88\\" xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
      <g
        stroke=\\"#063855\\"
        strokeWidth={2}
        fill=\\"none\\"
        fillRule=\\"evenodd\\"
        strokeLinecap=\\"square\\"
      >
        <path d=\\"M51 37 37 51M51 51 37 37\\" />
      </g>
    </svg>
  )
}

export default SvgComponent
"
`;

exports[`convert config should support options 1 1`] = `
"import * as React from 'react'

function SvgComponent() {
  return (
    <svg width={88} height={88} xmlns=\\"http://www.w3.org/2000/svg\\">
      <g
        stroke=\\"#063855\\"
        strokeWidth={2}
        fill=\\"none\\"
        fillRule=\\"evenodd\\"
        strokeLinecap=\\"square\\"
      >
        <path d=\\"M51 37 37 51M51 51 37 37\\" />
      </g>
    </svg>
  )
}

export default SvgComponent
"
`;

exports[`convert config should support options 2 1`] = `
"import * as React from 'react'

function SvgComponent(props) {
  return (
    <svg {...props} width={88} height={88} xmlns=\\"http://www.w3.org/2000/svg\\">
      <g
        stroke=\\"#063855\\"
        strokeWidth={2}
        fill=\\"none\\"
        fillRule=\\"evenodd\\"
        strokeLinecap=\\"square\\"
      >
        <path d=\\"M51 37 37 51M51 51 37 37\\" />
      </g>
    </svg>
  )
}

export default SvgComponent
"
`;

exports[`convert config should support options 3 1`] = `
"import * as React from 'react'

function SvgComponent(props) {
  return (
    <svg
      width=\\"1em\\"
      height=\\"1em\\"
      viewBox=\\"0 0 88 88\\"
      xmlns=\\"http://www.w3.org/2000/svg\\"
      {...props}
    >
      <g
        stroke=\\"#063855\\"
        strokeWidth={2}
        fill=\\"none\\"
        fillRule=\\"evenodd\\"
        strokeLinecap=\\"square\\"
      >
        <path d=\\"M51 37 37 51M51 51 37 37\\" />
      </g>
    </svg>
  )
}

export default SvgComponent
"
`;

exports[`convert config should support options 4 1`] = `
"import * as React from 'react'
import Svg, { G, Path } from 'react-native-svg'

function SvgComponent(props) {
  return (
    <Svg width={88} height={88} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
      <G
        stroke=\\"#063855\\"
        strokeWidth={2}
        fill=\\"none\\"
        fillRule=\\"evenodd\\"
        strokeLinecap=\\"square\\"
      >
        <Path d=\\"M51 37 37 51M51 51 37 37\\" />
      </G>
    </Svg>
  )
}

export default SvgComponent
"
`;

exports[`convert config should support options 5 1`] = `
"import * as React from 'react'
import { Svg } from 'expo'

function SvgComponent(props) {
  return (
    <Svg width={88} height={88} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
      <Svg.G
        stroke=\\"#063855\\"
        strokeWidth={2}
        fill=\\"none\\"
        fillRule=\\"evenodd\\"
        strokeLinecap=\\"square\\"
      >
        <Svg.Path d=\\"M51 37 37 51M51 51 37 37\\" />
      </Svg.G>
    </Svg>
  )
}

export default SvgComponent
"
`;

exports[`convert config should support options 6 1`] = `
"import * as React from 'react'
import Svg, { G, Path } from 'react-native-svg'

function SvgComponent(props) {
  return (
    <Svg
      width=\\"1em\\"
      height=\\"1em\\"
      viewBox=\\"0 0 88 88\\"
      xmlns=\\"http://www.w3.org/2000/svg\\"
      {...props}
    >
      <G
        stroke=\\"#063855\\"
        strokeWidth={2}
        fill=\\"none\\"
        fillRule=\\"evenodd\\"
        strokeLinecap=\\"square\\"
      >
        <Path d=\\"M51 37 37 51M51 51 37 37\\" />
      </G>
    </Svg>
  )
}

export default SvgComponent
"
`;

exports[`convert config should support options 7 1`] = `
"import * as React from 'react'
import Svg, { G, Path } from 'react-native-svg'

function SvgComponent() {
  return (
    <Svg width={88} height={88} xmlns=\\"http://www.w3.org/2000/svg\\">
      <G
        stroke=\\"#063855\\"
        strokeWidth={2}
        fill=\\"none\\"
        fillRule=\\"evenodd\\"
        strokeLinecap=\\"square\\"
      >
        <Path d=\\"M51 37 37 51M51 51 37 37\\" />
      </G>
    </Svg>
  )
}

export default SvgComponent
"
`;

exports[`convert config should support options 8 1`] = `
"import * as React from 'react'
import Svg, { G, Path } from 'react-native-svg'

function SvgComponent(props, svgRef) {
  return (
    <Svg
      width={88}
      height={88}
      xmlns=\\"http://www.w3.org/2000/svg\\"
      ref={svgRef}
      {...props}
    >
      <G
        stroke=\\"#063855\\"
        strokeWidth={2}
        fill=\\"none\\"
        fillRule=\\"evenodd\\"
        strokeLinecap=\\"square\\"
      >
        <Path d=\\"M51 37 37 51M51 51 37 37\\" />
      </G>
    </Svg>
  )
}

const ForwardRef = React.forwardRef(SvgComponent)
export default ForwardRef
"
`;

exports[`convert config should support options 9 1`] = `
"import * as React from 'react'

function SvgComponent(props, svgRef) {
  return (
    <svg
      width={88}
      height={88}
      xmlns=\\"http://www.w3.org/2000/svg\\"
      ref={svgRef}
      {...props}
    >
      <g
        stroke=\\"#063855\\"
        strokeWidth={2}
        fill=\\"none\\"
        fillRule=\\"evenodd\\"
        strokeLinecap=\\"square\\"
      >
        <path d=\\"M51 37 37 51M51 51 37 37\\" />
      </g>
    </svg>
  )
}

const ForwardRef = React.forwardRef(SvgComponent)
export default ForwardRef
"
`;

exports[`convert config should support options 10 1`] = `
"import * as React from 'react'

function SvgComponent(props) {
  return (
    <svg
      width={88}
      height={88}
      xmlns=\\"http://www.w3.org/2000/svg\\"
      a=\\"b\\"
      b={props.b}
      {...props}
    >
      <g
        stroke=\\"#063855\\"
        strokeWidth={2}
        fill=\\"none\\"
        fillRule=\\"evenodd\\"
        strokeLinecap=\\"square\\"
      >
        <path d=\\"M51 37 37 51M51 51 37 37\\" />
      </g>
    </svg>
  )
}

export default SvgComponent
"
`;

exports[`convert config should support options 11 1`] = `
"import * as React from 'react'

function SvgComponent(props) {
  return (
    <svg width={88} height={88} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
      <g
        stroke=\\"#063855\\"
        strokeWidth={2}
        fill=\\"black\\"
        fillRule=\\"evenodd\\"
        strokeLinecap=\\"square\\"
      >
        <path d=\\"M51 37 37 51M51 51 37 37\\" />
      </g>
    </svg>
  )
}

export default SvgComponent
"
`;

exports[`convert config should support options 12 1`] = `
"import * as React from 'react'

function SvgComponent(props) {
  return (
    <svg width={88} height={88} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
      <g
        stroke=\\"#063855\\"
        strokeWidth={2}
        fill={black}
        fillRule=\\"evenodd\\"
        strokeLinecap=\\"square\\"
      >
        <path d=\\"M51 37 37 51M51 51 37 37\\" />
      </g>
    </svg>
  )
}

export default SvgComponent
"
`;

exports[`convert config should support options 13 1`] = `
"import * as React from 'react'

function SvgComponent(props) {
  return (
    <svg
      width=\\"88px\\"
      height=\\"88px\\"
      viewBox=\\"0 0 88 88\\"
      xmlns=\\"http://www.w3.org/2000/svg\\"
      xmlnsXlink=\\"http://www.w3.org/1999/xlink\\"
      {...props}
    >
      <title>{'Dismiss'}</title>
      <desc>{'Created with Sketch.'}</desc>
      <defs />
      <g
        id=\\"Blocks\\"
        stroke=\\"none\\"
        strokeWidth={1}
        fill=\\"none\\"
        fillRule=\\"evenodd\\"
        strokeLinecap=\\"square\\"
      >
        <g id=\\"Dismiss\\" stroke=\\"#063855\\" strokeWidth={2}>
          <path d=\\"M51,37 L37,51\\" id=\\"Shape\\" />
          <path d=\\"M51,51 L37,37\\" id=\\"Shape\\" />
        </g>
      </g>
    </svg>
  )
}

export default SvgComponent
"
`;

exports[`convert config should support options 14 1`] = `
"import * as React from \\"react\\";

function SvgComponent(props) {
  return <svg width={88} height={88} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}><g stroke=\\"#063855\\" strokeWidth={2} fill=\\"none\\" fillRule=\\"evenodd\\" strokeLinecap=\\"square\\"><path d=\\"M51 37 37 51M51 51 37 37\\" /></g></svg>;
}

export default SvgComponent;"
`;

exports[`convert config should support options 15 1`] = `
"const noop = () => null

export default noop
"
`;

exports[`convert config should support options 16 1`] = `
"import * as React from 'react'

function SvgComponent({ title, titleId, ...props }) {
  return (
    <svg
      width={88}
      height={88}
      xmlns=\\"http://www.w3.org/2000/svg\\"
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <g
        stroke=\\"#063855\\"
        strokeWidth={2}
        fill=\\"none\\"
        fillRule=\\"evenodd\\"
        strokeLinecap=\\"square\\"
      >
        <path d=\\"M51 37 37 51M51 51 37 37\\" />
      </g>
    </svg>
  )
}

export default SvgComponent
"
`;

exports[`convert config should support options 17 1`] = `
"import * as React from 'react'

function SvgComponent(props) {
  return (
    <svg width={88} height={88} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
      <g
        stroke=\\"#063855\\"
        strokeWidth={2}
        fill=\\"none\\"
        fillRule=\\"evenodd\\"
        strokeLinecap=\\"square\\"
      >
        <path d=\\"M51 37 37 51M51 51 37 37\\" />
      </g>
    </svg>
  )
}

const MemoSvgComponent = React.memo(SvgComponent)
export default MemoSvgComponent
"
`;

exports[`convert config should support options 18 1`] = `
"import * as React from 'react'

function SvgComponent(props) {
  return (
    <svg width={88} height={88} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
      <g
        stroke=\\"#063855\\"
        strokeWidth={2}
        fill=\\"none\\"
        fillRule=\\"evenodd\\"
        strokeLinecap=\\"square\\"
      >
        <path d=\\"M51 37 37 51M51 51 37 37\\" />
      </g>
    </svg>
  )
}

export default SvgComponent
"
`;

exports[`convert config titleProp: without title added 1`] = `
"import * as React from 'react'

function SvgComponent({ title, titleId, ...props }) {
  return (
    <svg
      width={0}
      height={0}
      style={{
        position: 'absolute',
      }}
      aria-labelledby={titleId}
      {...props}
    >
      {title ? <title id={titleId}>{title}</title> : null}
      <path d=\\"M0 0h24v24H0z\\" fill=\\"none\\" />
    </svg>
  )
}

export default SvgComponent
"
`;

exports[`convert should convert 1`] = `
"import * as React from 'react'

function SvgComponent(props) {
  return (
    <svg width={88} height={88} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
      <g
        stroke=\\"#063855\\"
        strokeWidth={2}
        fill=\\"none\\"
        fillRule=\\"evenodd\\"
        strokeLinecap=\\"square\\"
      >
        <path d=\\"M51 37 37 51M51 51 37 37\\" />
      </g>
    </svg>
  )
}

export default SvgComponent
"
`;

exports[`convert should convert style attribute 1`] = `
"import * as React from 'react'

function SvgComponent(props) {
  return (
    <svg
      xmlns=\\"http://www.w3.org/2000/svg\\"
      xmlnsXlink=\\"http://www.w3.org/1999/xlink\\"
      width={48}
      height={48}
      {...props}
    >
      <g transform=\\"translate(0 -1004.362)\\">
        <g id=\\"prefix__a\\" color=\\"#000\\" fill=\\"#a3a3a3\\" strokeWidth={8}>
          <rect
            style={{
              marker: 'none',
            }}
            width={4}
            height={4}
            x={4}
            y={1010.362}
            rx={0.2}
            ry={0.2}
            overflow=\\"visible\\"
          />
          <rect
            ry={0.2}
            rx={0.2}
            y={1010.362}
            x={12}
            height={4}
            width={32}
            style={{
              marker: 'none',
            }}
            overflow=\\"visible\\"
          />
        </g>
        <use xlinkHref=\\"#prefix__a\\" />
        <use xlinkHref=\\"#prefix__a\\" transform=\\"translate(0 8)\\" />
        <use xlinkHref=\\"#prefix__a\\" transform=\\"translate(0 16)\\" />
        <use xlinkHref=\\"#prefix__a\\" transform=\\"translate(0 24)\\" />
        <use xlinkHref=\\"#prefix__a\\" transform=\\"translate(0 32)\\" />
      </g>
    </svg>
  )
}

export default SvgComponent
"
`;

exports[`convert should handle special SVG attributes 1`] = `
"import * as React from 'react'

function SvgComponent(props) {
  return (
    <svg xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
      <path externalResourcesRequired=\\"false\\" d=\\"M10 10h100v100H10z\\" />
    </svg>
  )
}

export default SvgComponent
"
`;

exports[`convert should not remove all style tags 1`] = `
"import * as React from 'react'

function SvgComponent(props) {
  return (
    <svg width={88} height={88} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
      <style>{'path{fill:red}'}</style>
      <g
        id=\\"prefix__Blocks\\"
        stroke=\\"none\\"
        strokeWidth={1}
        fill=\\"none\\"
        fillRule=\\"evenodd\\"
        strokeLinecap=\\"square\\"
      >
        <g id=\\"prefix__Dismiss\\" stroke=\\"#063855\\" strokeWidth={2}>
          <path d=\\"M51 37 37 51M51 51 37 37\\" id=\\"prefix__Shape\\" />
        </g>
      </g>
    </svg>
  )
}

export default SvgComponent
"
`;

exports[`convert should remove null characters 1`] = `
"import * as React from 'react'

function SvgComponent(props) {
  return (
    <svg
      xmlns=\\"http://www.w3.org/2000/svg\\"
      width={25}
      height={25}
      xmlSpace=\\"preserve\\"
      {...props}
    >
      <path
        d=\\"M19.4 24.5H5.6c-2.8 0-5.1-2.3-5.1-5.1V5.6C.5 2.8 2.8.5 5.6.5h13.8c2.8 0 5.1 2.3 5.1 5.1v13.8c0 2.8-2.3 5.1-5.1 5.1z\\"
        fill=\\"#fff\\"
        stroke=\\"#434a54\\"
        strokeMiterlimit={10}
      />
    </svg>
  )
}

export default SvgComponent
"
`;

exports[`convert should remove style tags 1`] = `
"import * as React from 'react'

function SvgComponent(props) {
  return (
    <svg width={88} height={88} xmlns=\\"http://www.w3.org/2000/svg\\" {...props}>
      <style />
      <g fill=\\"red\\" fillRule=\\"evenodd\\" strokeLinecap=\\"square\\">
        <g id=\\"prefix__Dismiss\\" stroke=\\"#063855\\" strokeWidth={2}>
          <path d=\\"M51 37 37 51M51 51 37 37\\" id=\\"prefix__Shape\\" />
        </g>
      </g>
    </svg>
  )
}

export default SvgComponent
"
`;
